--- a/emotional_wellbeing.html
+++ b/emotional_wellbeing.html
@@ -162,19 +162,20 @@
 			</div>
 		</div>
 	</header>
+
 	<section class="page_breadcrumb">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-7">
 					<div class="page_title">
-						<h1>Lab Booking [Radiologist]<img src="images/light_blue_heart_beat_icon.png" alt="heart beat icon"></h1>
+						<h1>Emotional Wellbeing<img src="images/light_blue_heart_beat_icon.png" alt="heart beat icon"></h1>
 					</div>
 				</div>
 				<div class="col-lg-5">
 					<div class="d-flex flex-wrap align-content-center" style="height: 100%;">
 						<ul>
 							<li>Patient</li>
-							<li>Lab Booking [Radiologist]</li>
+							<li>Emotional Wellbeing</li>
 						</ul>
 					</div>
 				</div>
@@ -182,138 +183,58 @@
 		</div>
 	</section>
 
-	<section class="search_clinic">
+	<section class="all_page_search_section">
 		<div class="container">
-			<div class="row">
-				<div class="col-md-10">
-					<div class="row">
-						<div class="col-md">
-							<p>Near by Pryde Clinic</p>
-							<input type="text" name="" class="form-group" placeholder="Search near by Pryde clinic">
-						</div>
-						<div class="col-md">
-							<p>City</p>
-							<select>
-								<option value="Ahmedabad">Ahmedabad</option>
-								<option value="Rajkot">Rajkot</option>
-								<option value="Jamnagar">Jamnagar</option>
-								<option value="Morbi">Morbi</option>
-							</select>
-						</div>
-						<div class="col-md">
-							<p>Area</p>
-							<select>
-								<option value="">Shivranjani</option>
-								<option value="">Nehrunagar</option>
-								<option value="">Kalupur</option>
-								<option value="">Chandlodiya</option>
-							</select>
-						</div>
-						<div class="col-md">
-							<p>Location</p>
-							<input type="text" name="" class="form-group" placeholder="X-ray Clinic, B-110, Doctor House,">
-						</div>
-					</div>
-				</div>
-				<div class="col-md-2">
-					<button class="btn search_btn">Search</button>
-				</div>
-			</div>
-		</div>
-		<hr>
-		<div class="container">
-			<div class="google_map">
-				<iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d236518.93920155888!2d70.65560237122777!3d22.140900693945333!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e6!4m5!1s0x3959c98ac71cdf0f%3A0x76dd15cfbe93ad3b!2sRajkot%2C+Gujarat!3m2!1d22.3038945!2d70.80215989999999!4m5!1s0x395838901ba8770d%3A0x68605fcbbea8c63b!2sGondal%2C+Gujarat+360311!3m2!1d21.9618155!2d70.7988491!5e0!3m2!1sen!2sin!4v1560864027220!5m2!1sen!2sin" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+			<label>Just ask, that’s all it takes</label>
+			<div class="input_with_icont">
+				<input type="text" class="form-control" placeholder="Search for Emotional Wellbeing - Psychiatry & Psychology...">
+				<img src="images/search.png" alt="searct_icon">
 			</div>
 		</div>
 	</section>
 
-	<section class="lab_booking">
+		<section class="specialities">
 		<div class="container">
 			<div class="section_title">
-				<h2 class="text-black">Lab [Radiologist]<img src="images/light_blue_heart_beat_icon.png" alt="heart beat icon"></h2>
+				<h2>Specialities<img src="images/light_blue_heart_beat_icon.png" alt="heart beat icon"></h2>
+				<!-- <div class="specialities_toggle_btn">
+					<a href="javascript:void(0);"><i class="fa fa-caret-down" aria-hidden="true"></i></a>
+				</div> -->
 			</div>
-			<div class="dermatology_doctor_detail lab_detail">
+			<div class="specialities_toggle_menu">
 				<div class="row">
-					<div class="col-lg-4">
-						<div class="lab_image">
-							<img src="images/lab-1.png">
-						</div>
+					<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
+						<a href="doctor_consulatation_doctor_list.html" class="speciality_menu_links d-flex flex-wrap align-content-center">
+							<img src="images/dermatology.png" alt="line image">
+							<p>Psychology</p>
+						</a>
 					</div>
-					<div class="col-lg-8">
-						<div class="doctor_details">
-							<div class="doctor_name">
-								<h4>Lab Name 1</h4>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
-							</div>
-							<div class="doctor_overview">
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate</p>
-							</div>
-							<div class="doctor_consult">
-								<p><strike>&#8377 500</strike><span class="blue_price">249</span></p>
-								<span class="gray_save">you saved: &#8377 251</span>
-							</div>
-							<button type="button">Book Now</button>
-						</div>
+					<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
+						<a href="doctor_consulatation_doctor_list.html" class="speciality_menu_links d-flex flex-wrap align-content-center">
+							<img src="images/doctor.png" alt="line image">
+							<p>Psychiatry</p>
+						</a>
 					</div>
 				</div>
 			</div>
 		</div>
-		<hr>
+	</section>
+
+	<section class="see_how_it_work">
 		<div class="container">
-			<div class="dermatology_doctor_detail lab_detail">
-				<div class="row">
-					<div class="col-lg-4">
-						<div class="lab_image">
-							<img src="images/lab-2.png">
-						</div>
-					</div>
-					<div class="col-lg-8">
-						<div class="doctor_details">
-							<div class="doctor_name">
-								<h4>Lab Name 2</h4>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
-							</div>
-							<div class="doctor_overview">
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate</p>
-							</div>
-							<div class="doctor_consult">
-								<p><strike>&#8377 500</strike><span class="blue_price">249</span></p>
-								<span class="gray_save">you saved: &#8377 251</span>
-							</div>
-							<button type="button">Book Now</button>
-						</div>
-					</div>
-				</div>
+			<div class="section_title">
+				<h2 class="text-black">See how it works<img src="images/light_blue_heart_beat_icon.png" alt="heart beat icon"></h2>
 			</div>
-		</div>
-		<hr>
-		<div class="container">
-			<div class="dermatology_doctor_detail lab_detail">
-				<div class="row">
-					<div class="col-lg-4">
-						<div class="lab_image">
-							<img src="images/lab-3.png">
-						</div>
-					</div>
-					<div class="col-lg-8">
-						<div class="doctor_details">
-							<div class="doctor_name">
-								<h4>Lab Name 3</h4>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
-							</div>
-							<div class="doctor_overview">
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate</p>
-							</div>
-							<div class="doctor_consult">
-								<p><strike>&#8377 500</strike><span class="blue_price">249</span></p>
-								<span class="gray_save">you saved: &#8377 251</span>
-							</div>
-							<button type="button">Book Now</button>
-						</div>
-					</div>
-				</div>
-			</div>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+				veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
+				esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+				laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae
+				ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit
+				aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor
+				sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
+				Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem
+				vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla
+			pariatur?</p>
 		</div>
 	</section>
 
@@ -387,5 +308,4 @@
 	<script type="text/javascript" src="js/slick.min.js"></script>
 	<script type="text/javascript" src="js/custom.js"></script>
 </body>
-</body>
-</html>
+</html> 	
