--- a/emotional_wellbeing_detail.html
+++ b/emotional_wellbeing_detail.html
@@ -162,19 +162,20 @@
 			</div>
 		</div>
 	</header>
+
 	<section class="page_breadcrumb">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-7">
 					<div class="page_title">
-						<h1>Lab Booking [Radiologist]<img src="images/light_blue_heart_beat_icon.png" alt="heart beat icon"></h1>
+						<h1>Emotional Wellbeing<img src="images/light_blue_heart_beat_icon.png" alt="heart beat icon"></h1>
 					</div>
 				</div>
 				<div class="col-lg-5">
 					<div class="d-flex flex-wrap align-content-center" style="height: 100%;">
 						<ul>
 							<li>Patient</li>
-							<li>Lab Booking [Radiologist]</li>
+							<li>Emotional Wellbeing</li>
 						</ul>
 					</div>
 				</div>
@@ -182,142 +183,200 @@
 		</div>
 	</section>
 
-	<section class="search_clinic">
+	<section class="all_page_search_section">
 		<div class="container">
-			<div class="row">
-				<div class="col-md-10">
-					<div class="row">
-						<div class="col-md">
-							<p>Near by Pryde Clinic</p>
-							<input type="text" name="" class="form-group" placeholder="Search near by Pryde clinic">
-						</div>
-						<div class="col-md">
-							<p>City</p>
-							<select>
-								<option value="Ahmedabad">Ahmedabad</option>
-								<option value="Rajkot">Rajkot</option>
-								<option value="Jamnagar">Jamnagar</option>
-								<option value="Morbi">Morbi</option>
-							</select>
-						</div>
-						<div class="col-md">
-							<p>Area</p>
-							<select>
-								<option value="">Shivranjani</option>
-								<option value="">Nehrunagar</option>
-								<option value="">Kalupur</option>
-								<option value="">Chandlodiya</option>
-							</select>
-						</div>
-						<div class="col-md">
-							<p>Location</p>
-							<input type="text" name="" class="form-group" placeholder="X-ray Clinic, B-110, Doctor House,">
-						</div>
-					</div>
-				</div>
-				<div class="col-md-2">
-					<button class="btn search_btn">Search</button>
-				</div>
-			</div>
-		</div>
-		<hr>
-		<div class="container">
-			<div class="google_map">
-				<iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d236518.93920155888!2d70.65560237122777!3d22.140900693945333!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e6!4m5!1s0x3959c98ac71cdf0f%3A0x76dd15cfbe93ad3b!2sRajkot%2C+Gujarat!3m2!1d22.3038945!2d70.80215989999999!4m5!1s0x395838901ba8770d%3A0x68605fcbbea8c63b!2sGondal%2C+Gujarat+360311!3m2!1d21.9618155!2d70.7988491!5e0!3m2!1sen!2sin!4v1560864027220!5m2!1sen!2sin" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+			<label>Just ask, that’s all it takes</label>
+			<div class="input_with_icont">
+				<input type="text" class="form-control" placeholder="Search for Emotional Wellbeing - Psychiatry & Psychology...">
+				<img src="images/search.png" alt="searct_icon">
 			</div>
 		</div>
 	</section>
 
-	<section class="lab_booking">
+	<section class="specialities">
 		<div class="container">
 			<div class="section_title">
-				<h2 class="text-black">Lab [Radiologist]<img src="images/light_blue_heart_beat_icon.png" alt="heart beat icon"></h2>
-			</div>
-			<div class="dermatology_doctor_detail lab_detail">
-				<div class="row">
-					<div class="col-lg-4">
-						<div class="lab_image">
-							<img src="images/lab-1.png">
-						</div>
-					</div>
-					<div class="col-lg-8">
-						<div class="doctor_details">
-							<div class="doctor_name">
-								<h4>Lab Name 1</h4>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
-							</div>
-							<div class="doctor_overview">
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate</p>
-							</div>
-							<div class="doctor_consult">
-								<p><strike>&#8377 500</strike><span class="blue_price">249</span></p>
-								<span class="gray_save">you saved: &#8377 251</span>
-							</div>
-							<button type="button">Book Now</button>
-						</div>
-					</div>
+				<h2>Specialities<img src="images/light_blue_heart_beat_icon.png" alt="heart beat icon"></h2>
+				<div class="specialities_toggle_btn">
+					<a href="javascript:void(0);"><i class="fa fa-caret-down" aria-hidden="true"></i></a>
 				</div>
 			</div>
-		</div>
-		<hr>
-		<div class="container">
-			<div class="dermatology_doctor_detail lab_detail">
+			<div class="specialities_toggle_menu" style="display: none;">
 				<div class="row">
-					<div class="col-lg-4">
-						<div class="lab_image">
-							<img src="images/lab-2.png">
-						</div>
+					<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
+						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
+							<img src="images/dermatology.png" alt="line image">
+							<p>Dermatology</p>
+						</a>
 					</div>
-					<div class="col-lg-8">
-						<div class="doctor_details">
-							<div class="doctor_name">
-								<h4>Lab Name 2</h4>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
-							</div>
-							<div class="doctor_overview">
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate</p>
-							</div>
-							<div class="doctor_consult">
-								<p><strike>&#8377 500</strike><span class="blue_price">249</span></p>
-								<span class="gray_save">you saved: &#8377 251</span>
-							</div>
-							<button type="button">Book Now</button>
-						</div>
+					<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
+						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
+							<img src="images/ENT.png" alt="line image">
+							<p>ENT</p>
+						</a>
 					</div>
-				</div>
-			</div>
-		</div>
-		<hr>
-		<div class="container">
-			<div class="dermatology_doctor_detail lab_detail">
-				<div class="row">
-					<div class="col-lg-4">
-						<div class="lab_image">
-							<img src="images/lab-3.png">
-						</div>
+					<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
+						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
+							<img src="images/dentistry.png" alt="line image">
+							<p>Dentistry</p>
+						</a>
 					</div>
-					<div class="col-lg-8">
-						<div class="doctor_details">
-							<div class="doctor_name">
-								<h4>Lab Name 3</h4>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
-							</div>
-							<div class="doctor_overview">
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate</p>
-							</div>
-							<div class="doctor_consult">
-								<p><strike>&#8377 500</strike><span class="blue_price">249</span></p>
-								<span class="gray_save">you saved: &#8377 251</span>
-							</div>
-							<button type="button">Book Now</button>
-						</div>
+					<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
+						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
+							<img src="images/general_GP.png" alt="line image">
+							<p>General Physician - GP</p>
+						</a>
+					</div>
+					<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
+						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
+							<img src="images/medicine.png" alt="line image">
+							<p>Internal Medicine</p>
+						</a>
+					</div>
+					<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
+						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
+							<img src="images/Gastroenterology.png" alt="line image">
+							<p>Gastroenterology</p>
+						</a>
+					</div>
+					<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
+						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
+							<img src="images/nd.png" alt="line image">
+							<p>Nutrition & Dietetics</p>
+						</a>
+					</div>
+					<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
+						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
+							<img src="images/doctor.png" alt="line image">
+							<p>Obstetrics & Gynaecology</p>
+						</a>
+					</div>
+					<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
+						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
+							<img src="images/nurse.png" alt="line image">
+							<p>Paediatrics</p>
+						</a>
+					</div>
+					<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
+						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
+							<img src="images/psychiatry.png" alt="line image">
+							<p>Psychiatry</p>
+						</a>
+					</div>
+					<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
+						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
+							<img src="images/drug.png" alt="line image">
+							<p>Psychology</p>
+						</a>
+					</div>
+					<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
+						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
+							<img src="images/syrings.png" alt="line image">
+							<p>Pulmonology</p>
+						</a>
 					</div>
 				</div>
 			</div>
 		</div>
 	</section>
 
-		<footer>
+	<section class="family_doctor">
+		<div class="container">
+			<div class="section_title">
+				<h2>Dermatology<img src="images/light_blue_heart_beat_icon.png" alt="heart beat icon"></h2>
+			</div>
+			<div class="family_doctor_des">
+				<div class="row">
+					<div class="col-lg-4">
+						<ul class="nav nav-tabs row">
+							<li class="col-xl-6 col-md-6 mb-3 nav-item active">
+								<a class="tab_link" data-toggle="tab" href="#about">
+									<img src="images/about.jpg">
+									<p>About</p>
+								</a>
+							</li>
+							<li class="col-xl-6 col-md-6 mb-3 nav-item">
+								<a class="tab_link" data-toggle="tab" href="#education">
+									<img src="images/edu.jpg">
+									<p>Education</p>
+								</a>
+							</li>
+							<li class="col-xl-6 col-md-6 mb-3 nav-item">
+								<a class="tab_link" data-toggle="tab" href="#experiance">
+									<img src="images/doctor.png">
+									<p>Experiance</p>
+								</a>
+							</li>
+							<li class="col-xl-6 col-md-6 mb-3 nav-item">
+								<a class="tab_link" data-toggle="tab" href="#medicalRegNo">
+									<img src="images/medNo.jpg">
+									<p>Medical Registration No.</p>
+								</a>
+							</li>
+						</ul>
+					</div>
+					<div class="col-lg-4 col-md-6">
+						<div class="doctor_image">
+							<img src="images/doctor-1.png">
+						</div>
+					</div>
+					<div class="col-lg-4 col-md-6">
+						<div class="doctor_details">
+							<div class="doctor_name">
+								<h4><span class="doctor_blue">Dr.</span> Archana Andavarapu</h4>
+								<p>Dr. Archana Andavarapu - Consult A Pulmonologist Online Anytime | CallHealth, India</p>
+							</div>
+							<div class="doctor_overview">
+								<h6>Derminology</h6>
+								<p>5 Years of Experience</p>
+								<p>English, Hindi, Telugu, Tamil</p>
+							</div>
+							<div class="doctor_consult">
+								<h6>Consultation fee:</h6>
+								<p><strike>&#8377 500</strike><span class="blue_price">249</span></p>
+								<span class="gray_save">you saved: &#8377 251</span>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="tab-content">
+				<div class="tab-pane active" id="about" >
+					<h3>About</h3>
+					<p>Dr. Archana Andavarapu is an academy-oriented Dermatologist & Cosmetologist who has 5 years of experience in the fields of Clinical & Cosmetic Dermatology with expertise in advanced Cosmetology, Venereology & Leprosy. He has presented & published various papers in the respective fields and has won a Gold Medal Post-graduation - 2015). The services offered are Skin biopsy, Electrocautery (removal of warts, skin tags, corns etc.), Chemical peeling, PRP (Platelet rich plasma - for hair treatment, Chronic non-healing ulcers, Facial rejuvenation), Derma rollers, Vitiligo surgeries, Nail surgeries & many more.</p>
+				</div>
+				<div class="tab-pane" id="education">
+					<h3>Education</h3>
+					<p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+				</div>
+				<div id="experiance" class="tab-pane">
+					<h3>Experiance</h3>
+					<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
+				</div>
+				<div id="medicalRegNo" class="tab-pane">
+					<h3>Medical Registration No.</h3>
+					<p>Eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+				</div>
+			</div>
+			<div class="radio_form">
+				<div class="row">
+					<div class="form-check mt_2">
+						<input class="form-check-input" type="radio" name="consult" id="video" value="option1" checked>
+						<label class="form-check-label text-center" for="video">Video</label>
+					</div>
+					<div class="form-check mt_2 mr_2">
+						<input class="form-check-input" type="radio" name="consult" id="audio" value="option1" checked>
+						<label class="form-check-label text-center" for="audio">Audio</label>
+					</div>
+					<div class="doctor_details mt_2">
+						<button class="px_2">consult</button>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<footer>
 		<div class="footer_left">
 			<div class="footer_contact_info">
 				<div class="logo">
@@ -387,5 +446,4 @@
 	<script type="text/javascript" src="js/slick.min.js"></script>
 	<script type="text/javascript" src="js/custom.js"></script>
 </body>
-</body>
-</html>
+</html> 	
