--- a/family_doctor.html
+++ b/family_doctor.html
@@ -167,14 +167,14 @@
 			<div class="row">
 				<div class="col-lg-7">
 					<div class="page_title">
-						<h1>Lab Booking [Radiologist]<img src="images/light_blue_heart_beat_icon.png" alt="heart beat icon"></h1>
+						<h1>Doctor Consultation<img src="images/light_blue_heart_beat_icon.png" alt="heart beat icon"></h1>
 					</div>
 				</div>
 				<div class="col-lg-5">
 					<div class="d-flex flex-wrap align-content-center" style="height: 100%;">
 						<ul>
 							<li>Patient</li>
-							<li>Lab Booking [Radiologist]</li>
+							<li>Doctor Consultation</li>
 						</ul>
 					</div>
 				</div>
@@ -182,135 +182,214 @@
 		</div>
 	</section>
 
-	<section class="search_clinic">
+	<section class="all_page_search_section">
 		<div class="container">
-			<div class="row">
-				<div class="col-md-10">
-					<div class="row">
-						<div class="col-md">
-							<p>Near by Pryde Clinic</p>
-							<input type="text" name="" class="form-group" placeholder="Search near by Pryde clinic">
-						</div>
-						<div class="col-md">
-							<p>City</p>
-							<select>
-								<option value="Ahmedabad">Ahmedabad</option>
-								<option value="Rajkot">Rajkot</option>
-								<option value="Jamnagar">Jamnagar</option>
-								<option value="Morbi">Morbi</option>
-							</select>
-						</div>
-						<div class="col-md">
-							<p>Area</p>
-							<select>
-								<option value="">Shivranjani</option>
-								<option value="">Nehrunagar</option>
-								<option value="">Kalupur</option>
-								<option value="">Chandlodiya</option>
-							</select>
-						</div>
-						<div class="col-md">
-							<p>Location</p>
-							<input type="text" name="" class="form-group" placeholder="X-ray Clinic, B-110, Doctor House,">
-						</div>
-					</div>
-				</div>
-				<div class="col-md-2">
-					<button class="btn search_btn">Search</button>
-				</div>
-			</div>
-		</div>
-		<hr>
-		<div class="container">
-			<div class="google_map">
-				<iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d236518.93920155888!2d70.65560237122777!3d22.140900693945333!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e6!4m5!1s0x3959c98ac71cdf0f%3A0x76dd15cfbe93ad3b!2sRajkot%2C+Gujarat!3m2!1d22.3038945!2d70.80215989999999!4m5!1s0x395838901ba8770d%3A0x68605fcbbea8c63b!2sGondal%2C+Gujarat+360311!3m2!1d21.9618155!2d70.7988491!5e0!3m2!1sen!2sin!4v1560864027220!5m2!1sen!2sin" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+			<label>See a Specialist from home within minutes.</label>
+			<div class="input_with_icont">
+				<input type="text" class="form-control" placeholder="Search for Doctors across multiple specialities and more...">
+				<img src="images/search.png" alt="searct_icon">
 			</div>
 		</div>
 	</section>
 
-	<section class="lab_booking">
+
+	<section class="dermatology">
 		<div class="container">
 			<div class="section_title">
-				<h2 class="text-black">Lab [Radiologist]<img src="images/light_blue_heart_beat_icon.png" alt="heart beat icon"></h2>
+				<h2 class="text-black">Family Doctor<img src="images/light_blue_heart_beat_icon.png" alt="heart beat icon"></h2>
 			</div>
-			<div class="dermatology_doctor_detail lab_detail">
+			<div class="dermatology_doctor_detail">
 				<div class="row">
 					<div class="col-lg-4">
-						<div class="lab_image">
-							<img src="images/lab-1.png">
+						<div class="doctor_image">
+							<img src="images/doctor-1.png">
 						</div>
 					</div>
 					<div class="col-lg-8">
 						<div class="doctor_details">
 							<div class="doctor_name">
-								<h4>Lab Name 1</h4>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
+								<h4><span class="doctor_blue">Dr.</span> Archana Andavarapu</h4>
+								<p>Dr. Archana Andavarapu - Consult A Pulmonologist Online Anytime | CallHealth, India</p>
 							</div>
 							<div class="doctor_overview">
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate</p>
+								<h6>Doctor Overview</h6>
+								<p>Dr. Archana Andavarapu is an academy-oriented Dermatologist and Cosmetologist who has 5 years of experience in the fields of Clinical and Cosmetic Dermatology with expertise in advanced Cosmetology, Venereology and Leprosy. He has presented and published various papers in the...</p>
 							</div>
 							<div class="doctor_consult">
 								<p><strike>&#8377 500</strike><span class="blue_price">249</span></p>
 								<span class="gray_save">you saved: &#8377 251</span>
 							</div>
-							<button type="button">Book Now</button>
+							<button type="button">Consult</button>
 						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-xl col-lg-3 col-md-4 col-sm-6">
+						<a href="#" class="dermatology_info d-flex flex-wrap align-content-center">
+							<img src="images/1.png" alt="line image">
+							<p>Qualification:</p>
+							<p>MBBS,MD (DVL)</p>
+						</a>
+					</div>
+					<div class="col-xl col-lg-3 col-md-4 col-sm-6">
+						<a href="#" class="dermatology_info d-flex flex-wrap align-content-center">
+							<img src="images/2.png" alt="line image">
+							<p>Speciality:</p>
+							<p>Dermatology</p>
+						</a>
+					</div>
+					<div class="col-xl col-lg-3 col-md-4 col-sm-6">
+						<a href="#" class="dermatology_info d-flex flex-wrap align-content-center">
+							<img src="images/3.png" alt="line image">
+							<p>Years of Experience:</p>
+							<p>5</p>
+						</a>
+					</div>
+					<div class="col-xl col-lg-3 col-md-4 col-sm-6">
+						<a href="#" class="dermatology_info d-flex flex-wrap align-content-center">
+							<img src="images/4.png" alt="line image">
+							<p>Available days:</p>
+							<p>Mon - Sat</p>
+						</a>
+					</div>
+					<div class="col-xl col-lg-3 col-md-4 col-sm-6">
+						<a href="#" class="dermatology_info d-flex flex-wrap align-content-center">
+							<img src="images/5.png" alt="line image">
+							<p>Available timings: </p>
+							<p>	08:00 AM to 03:00 PM</p>
+						</a>
 					</div>
 				</div>
 			</div>
 		</div>
 		<hr>
 		<div class="container">
-			<div class="dermatology_doctor_detail lab_detail">
+			<div class="dermatology_doctor_detail">
 				<div class="row">
 					<div class="col-lg-4">
-						<div class="lab_image">
-							<img src="images/lab-2.png">
+						<div class="doctor_image">
+							<img src="images/doctor-2.png">
 						</div>
 					</div>
 					<div class="col-lg-8">
 						<div class="doctor_details">
 							<div class="doctor_name">
-								<h4>Lab Name 2</h4>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
+								<h4><span class="doctor_blue">Dr.</span> Archana Andavarapu</h4>
+								<p>Dr. Archana Andavarapu - Consult A Pulmonologist Online Anytime | CallHealth, India</p>
 							</div>
 							<div class="doctor_overview">
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate</p>
+								<h6>Doctor Overview</h6>
+								<p>Dr. Archana Andavarapu is an academy-oriented Dermatologist and Cosmetologist who has 5 years of experience in the fields of Clinical and Cosmetic Dermatology with expertise in advanced Cosmetology, Venereology and Leprosy. He has presented and published various papers in the...</p>
 							</div>
 							<div class="doctor_consult">
 								<p><strike>&#8377 500</strike><span class="blue_price">249</span></p>
 								<span class="gray_save">you saved: &#8377 251</span>
 							</div>
-							<button type="button">Book Now</button>
+							<button type="button">Consult</button>
 						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-xl col-lg-3 col-md-4 col-sm-6">
+						<a href="#" class="dermatology_info d-flex flex-wrap align-content-center">
+							<img src="images/1.png" alt="line image">
+							<p>Qualification:</p>
+							<p>MBBS,MD (DVL)</p>
+						</a>
+					</div>
+					<div class="col-xl col-lg-3 col-md-4 col-sm-6">
+						<a href="#" class="dermatology_info d-flex flex-wrap align-content-center">
+							<img src="images/2.png" alt="line image">
+							<p>Speciality:</p>
+							<p>Dermatology</p>
+						</a>
+					</div>
+					<div class="col-xl col-lg-3 col-md-4 col-sm-6">
+						<a href="#" class="dermatology_info d-flex flex-wrap align-content-center">
+							<img src="images/3.png" alt="line image">
+							<p>Years of Experience:</p>
+							<p>5</p>
+						</a>
+					</div>
+					<div class="col-xl col-lg-3 col-md-4 col-sm-6">
+						<a href="#" class="dermatology_info d-flex flex-wrap align-content-center">
+							<img src="images/4.png" alt="line image">
+							<p>Available days:</p>
+							<p>Mon - Sat</p>
+						</a>
+					</div>
+					<div class="col-xl col-lg-3 col-md-4 col-sm-6">
+						<a href="#" class="dermatology_info d-flex flex-wrap align-content-center">
+							<img src="images/5.png" alt="line image">
+							<p>Available timings: </p>
+							<p>	08:00 AM to 03:00 PM</p>
+						</a>
 					</div>
 				</div>
 			</div>
 		</div>
 		<hr>
 		<div class="container">
-			<div class="dermatology_doctor_detail lab_detail">
+			<div class="dermatology_doctor_detail">
 				<div class="row">
 					<div class="col-lg-4">
-						<div class="lab_image">
-							<img src="images/lab-3.png">
+						<div class="doctor_image">
+							<img src="images/doctor-3.png">
 						</div>
 					</div>
 					<div class="col-lg-8">
 						<div class="doctor_details">
 							<div class="doctor_name">
-								<h4>Lab Name 3</h4>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
+								<h4><span class="doctor_blue">Dr.</span> Archana Andavarapu</h4>
+								<p>Dr. Archana Andavarapu - Consult A Pulmonologist Online Anytime | CallHealth, India</p>
 							</div>
 							<div class="doctor_overview">
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate</p>
+								<h6>Doctor Overview</h6>
+								<p>Dr. Archana Andavarapu is an academy-oriented Dermatologist and Cosmetologist who has 5 years of experience in the fields of Clinical and Cosmetic Dermatology with expertise in advanced Cosmetology, Venereology and Leprosy. He has presented and published various papers in the...</p>
 							</div>
 							<div class="doctor_consult">
 								<p><strike>&#8377 500</strike><span class="blue_price">249</span></p>
 								<span class="gray_save">you saved: &#8377 251</span>
 							</div>
-							<button type="button">Book Now</button>
+							<button type="button">Consult</button>
 						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-xl col-lg-3 col-md-4 col-sm-6">
+						<a href="#" class="dermatology_info d-flex flex-wrap align-content-center">
+							<img src="images/1.png" alt="line image">
+							<p>Qualification:</p>
+							<p>MBBS,MD (DVL)</p>
+						</a>
+					</div>
+					<div class="col-xl col-lg-3 col-md-4 col-sm-6">
+						<a href="#" class="dermatology_info d-flex flex-wrap align-content-center">
+							<img src="images/2.png" alt="line image">
+							<p>Speciality:</p>
+							<p>Dermatology</p>
+						</a>
+					</div>
+					<div class="col-xl col-lg-3 col-md-4 col-sm-6">
+						<a href="#" class="dermatology_info d-flex flex-wrap align-content-center">
+							<img src="images/3.png" alt="line image">
+							<p>Years of Experience:</p>
+							<p>5</p>
+						</a>
+					</div>
+					<div class="col-xl col-lg-3 col-md-4 col-sm-6">
+						<a href="#" class="dermatology_info d-flex flex-wrap align-content-center">
+							<img src="images/4.png" alt="line image">
+							<p>Available days:</p>
+							<p>Mon - Sat</p>
+						</a>
+					</div>
+					<div class="col-xl col-lg-3 col-md-4 col-sm-6">
+						<a href="#" class="dermatology_info d-flex flex-wrap align-content-center">
+							<img src="images/5.png" alt="line image">
+							<p>Available timings: </p>
+							<p>	08:00 AM to 03:00 PM</p>
+						</a>
 					</div>
 				</div>
 			</div>
@@ -387,5 +466,4 @@
 	<script type="text/javascript" src="js/slick.min.js"></script>
 	<script type="text/javascript" src="js/custom.js"></script>
 </body>
-</body>
-</html>
+</html> 	
